<resources>
    <string name="app_name">Ali Bn Ali hospital</string>
    <string name="map_key"></string>

    <string name="login">Log In</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone number</string>
    <string name="are_you_have_account">Have an account ? </string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="confirmation_code">Verification code</string>
    <string name="enter_verification_code_sent_to">Enter code sent to</string>
    <string name="user_blocked">User is blocked</string>
    <string name="name">Name</string>
    <string name="user_exist">User is exist</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search...</string>
    <string name="sar">SAR</string>
    <string name="photo_sent">Photo sent</string>
    <string name="no_image">No image</string>
    <string name="price">Price</string>
    <string name="copied">Copied</string>
    <string name="upload_video">Upload video</string>
    <string name="ad_price">Price</string>
    <string name="address">Address</string>
    <string name="ch_types">Choose types</string>
    <string name="ch_ad_image">Choose ad images</string>
    <string name="vid_pem_denied">Video permission denied</string>
    <string name="inv_value">Invalid value</string>
    <string name="show">Show</string>
    <string name="ch_image">Choose image</string>
    <string name="select">Select</string>
    <string name="suc">Success!</string>
    <string name="already_read">Accept terms and conditions</string>
    <string name="done">Done</string>
    <string name="accept_terms">Accept terms and conditions</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="change_language">Change language</string>
    <string name="next">Next</string>
    <string name="inv_url">Invalid url</string>
    <string name="update_profile">Update profile</string>
    <string name="image_uploded">image uploaded</string>
    <string name="follow">Follow</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="field_req">Field required</string>
    <string name="password_short">Password Short</string>
    <string name="i_have_account">You already have an account</string>
    <string name="or">OR</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="resend">Resend</string>
    <string name="enter_code_sent_to">Enter code sent to</string>

    <string name="general_settings">General settings</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="default1">Default</string>
    <string name="language_settings">Language Settings</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="help">Help</string>
    <string name="app_tour">App Tour</string>
    <string name="version_no">Version No:</string>
    <string name="welcome">Welcome</string>
    <string name="ch_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_account"><![CDATA[I don\'t have account <font color="#FF575A">Sign Up</font>]]></string>
    <string name="re_password">Re-Password</string>
    <string name="pas_not_match">Password not match</string>
    <string name="have_account"><![CDATA[I have account <font color="#FF575A">Log In</font>]]></string>
    <string name="search2">Search</string>
    <string name="reservations">Reservations</string>
    <string name="departments">Departments</string>
    <string name="reserve_clinic">Reserve clinic</string>
    <string name="you_can_now">You can now book an appointment with a doctor quickly and easily</string>
    <string name="online_booking">Online booking</string>
    <string name="service_operation">Service,operation</string>
    <string name="home_visit">Home visit</string>
    <string name="foreign_consultant">Foreign consultant</string>
    <string name="filter">Filter</string>
    <string name="search_for_doctors">Search for doctor</string>
    <string name="no_search_results">No search results</string>
    <string name="favorite">Favorite</string>
    <string name="no_appointments">No appointments</string>
    <string name="no_service_and_operation_to_show">No service and operation to show</string>
    <string name="my_appointment">Appointments</string>
    <string name="ser_op">Service and operations</string>
    <string name="search_for_department">Search for department</string>
    <string name="select_the_address">Select location on map</string>
    <string name="additional_details">Additional details</string>
    <string name="service_or_process">Service Or Process</string>
    <string name="the_most_prominent_offers">The most prominent offers</string>
    <string name="reserv">Reserv</string>
    <string name="offer_detials">offer Detials</string>
    <string name="ratings">Ratings</string>
    <string name="book_an_appointment_online">Book an appointment online</string>
    <string name="more_detials">More Detials</string>
    <string name="doctor_details">Doctor details</string>
    <string name="price2">Price</string>
    <string name="rates">Rates</string>
    <string name="available_appointments">Available Appointments</string>
    <string name="choose_day">Choose Day :</string>
    <string name="choose_hour">Choose Hour :</string>
    <string name="appoinments">Appoinments :</string>
    <string name="confirm_appoinment_reserv">Confirm Appoinment Reserv</string>
    <string name="show_all">Show All</string>
    <string name="confirm_reservision">Confirm Reservision</string>
    <string name="complete_name">Complete Name</string>
    <string name="incorrect_phone_pass">In Correct Phone or Password</string>
    <string name="ryal"> Ryal </string>
    <string name="offers">Offers</string>
    <string name="about">*About</string>
    <string name="change">Change</string>
    <string name="canceled">Canceled</string>
    <string name="complete_request">Complete request</string>
    <string name="call_method">Call method</string>
    <string name="additional_notes">Additional notes(optional)</string>
    <string name="age">Age</string>
    <string name="log_sign_up">Please login or sign up</string>
    <string name="call">Call</string>
    <string name="video">Video</string>
    <string name="ch">Choose</string>
    <string name="doctors">Doctors</string>
    <string name="not_available">Not available</string>
    <string name="diseases">Diseases</string>
    <string name="files">Files</string>
    <string name="add_rate">Add rate</string>
    <string name="add_comment">Add comment...</string>
    <string name="start_chat">Start chat</string>


</resources>