<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.alibenalihospital.models.NotificationModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/add_rate"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            image='@{model.reservation.type.equals("online")?model.reservation.doctor.image:model.reservation.offer.first_image.image}'
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text='@{model.reservation.type.equals("online")?model.reservation.doctor.name:model.reservation.offer.title}'
            />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/rateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:srb_isIndicator="false"
            app:srb_starSize="30dp"
            app:srb_starsSeparation="12dp"
            app:srb_stepSize="1"
            app:srb_starBorderWidth="3"
            />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="0"
            />

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16sp"
            android:background="@drawable/small_rounded_stroke_gray"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/add_comment"
            android:textSize="15sp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >
            <Button
                android:id="@+id/btnRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/add_rate"
                android:textColor="@color/white"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                />

        </LinearLayout>
    </LinearLayout>
</layout>